2011-04-23  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Oliver Hunt.

        Bug 59287 - DFG JIT - Handle temporaries as vars, allowing support for ?:

        SetLocals to temporaries will only be generated if they are used within other
        blocks, due to the SSA based DCE.

        * dfg/DFGByteCodeParser.cpp:
        (JSC::DFG::ByteCodeParser::ByteCodeParser):
        (JSC::DFG::ByteCodeParser::get):
        (JSC::DFG::ByteCodeParser::set):
        (JSC::DFG::ByteCodeParser::getLocal):
        (JSC::DFG::ByteCodeParser::setLocal):
        (JSC::DFG::ByteCodeParser::parseBlock):
        (JSC::DFG::ByteCodeParser::processPhiStack):
        (JSC::DFG::ByteCodeParser::allocateVirtualRegisters):
        (JSC::DFG::ByteCodeParser::parse):
        * dfg/DFGGraph.h:
        (JSC::DFG::BasicBlock::BasicBlock):

2011-04-22  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Sam Weinig & Geoff Garen.

        Bug 59266 - DFG JIT - Add SSA style DCE

        This works by making GetLocal nodes reference SetLocal nodes from prior blocks,
        via intermediate Phi nodes. Whenever we add a GetLocal to the graph, also add a
        matching child Phi, and add the Phi to a work queue to add references to prior
        definitions once we have the full CFG & can determine predecessors. This process
        is iterative, inserting new phis into predecessors as necessary.

        * dfg/DFGByteCodeParser.cpp:
        (JSC::DFG::ByteCodeParser::getVariable):
        (JSC::DFG::ByteCodeParser::setVariable):
        (JSC::DFG::ByteCodeParser::getArgument):
        (JSC::DFG::ByteCodeParser::setArgument):
        (JSC::DFG::ByteCodeParser::parseBlock):
        (JSC::DFG::ByteCodeParser::processWorkQueue):
        (JSC::DFG::ByteCodeParser::allocateVirtualRegisters):
        (JSC::DFG::ByteCodeParser::parse):
        * dfg/DFGGraph.cpp:
        (JSC::DFG::Graph::dump):
        (JSC::DFG::Graph::refChildren):
        * dfg/DFGGraph.h: